# SimpleNurbs

./: .gitignore  CMakeLists.txt  Readme_Linux.txt  SimpleNurbs.cpp  SimpleNurbs.dsp  SimpleNurbs.dsw  SimpleNurbs.h  SimpleNurbs.sln  SimpleNurbs.vcproj  StdAfx.cpp  StdAfx.h
nurbs++-3.0.11/: Doxyfile  Makefile  config.status  libtool  nurbs++-config
nurbs++-3.0.11/config/: Makefile
nurbs++-3.0.11/examples/: Makefile
nurbs++-3.0.11/examples/image/: Makefile
nurbs++-3.0.11/examples/matrix/: Makefile
nurbs++-3.0.11/examples/numerical/: Makefile
nurbs++-3.0.11/examples/nurbs/: Makefile
nurbs++-3.0.11/examples/vc6/: vc6.sln
nurbs++-3.0.11/image/: Makefile  color.cpp  image.cpp
nurbs++-3.0.11/image/.deps/: color.Plo  filter_.Plo  image_.Plo  rec_filter_.Plo
nurbs++-3.0.11/include/: Makefile
nurbs++-3.0.11/matrix/: Makefile  cvector.h  matrix.cpp  matrix.h  matrix_char.cpp  matrix_double.cpp  matrix_float.cpp  matrix_hpoint.cpp  matrix_uchar.cpp  vector.cpp  vector_double.cpp  vector_float.cpp
nurbs++-3.0.11/matrix/.deps/: barray2d_char.Plo  barray2d_complex.Plo  barray2d_coordinate.Plo  barray2d_double.Plo  barray2d_float.Plo  barray2d_hpoint.Plo  barray2d_int.Plo  barray2d_point.Plo  barray2d_uchar.Plo  barray_char.Plo  barray_complex.Plo  barray_coordinate.Plo  barray_double.Plo  (+29 more)
nurbs++-3.0.11/numerical/: Makefile
nurbs++-3.0.11/nurbs/: Makefile  d_nurbs.cpp  hnurbsS.cpp  hnurbsS_sp.cpp  matrixRT.cpp  matrixRT.h  nurbs.cpp  nurbs.h  nurbsS.h  nurbs_sp.cpp  surface.cpp  surface.h
nurbs++-3.0.11/tests/: Makefile
test/: CMakeLists.txt  main.cpp
(+70 files in other folders)
